...
                                val signUpIntent =
                                    Intent(this@LoginActivity, SignUpActivity::class.java)
                                startActivity(signUpIntent)
                            },
                            modifier = Modifier.padding(innerPadding)
                        ) {
                            Text("No Account? Sign Up")
                        }
                    }
                }
            }
        }
    }
...
